2002-02-21 Alexander Rawass <alexannika@users.sourceforge.net>

	* updated documentation/homepage
	  - updated install page
	  - started to write a player tutorial
	* updated some of my missions (author/description tags)

	
2002-02-19 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* new callbacks:
	  - _std.getSystemName()
	  - _unit.getVelocity(),isPlanet(),isStarShip(),isJumppoint()
	* added scale and add to vec3.c
	* random_launch.c: launch in front of player
	* modified unit.h to have is... functions
	* started to write more AIs (not yet)

	
2002-02-18 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* little improvements to random_launch.c

	
2002-02-17 Alexander Rawass <alexannika@users.sourceforge.net>

	* added omap object type to scripting (sort of struct)
	  - added file script_call_omap.cpp, mod. Makefile.am
	* wrote explore_the_unviverse.c script and missions
	* wrote random_launch.c


2002-02-16 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified main.cpp, so that the savegame is only loaded if
	  there's a savegame variable
	

2002-02-13 Daniel Horn <hellcatv@hotmail.com>
	* Made genearted light maps save in home directory
	* Made universes searched for in home directory
	* Wired in a star system generator that will generate systems that are not there
	* Added feature taht will call this generator in the event a system is not found
	* Added a lame autopilot feature
	* Added another version of config_xml.cpp  -- galaxy_xml  we should really combine duplicate code...but I don't know how to do it...config_xml depends a lot on joystick....
	* Explore!!!!!!!!!!!!!!!!! You can craete a galaxy map using galaxy_xml to specify connectivity and who owns system...otherwise ti will pick unknown faction to own everything (hate everyone)
	
2002-02-12 Alexander Rawass <alexannika@users.sourceforge.net>

	* first tutorial mission
	* gave the hornet cockpit a message display
	* moved the defines for HOMESUBDIR,CONFIGFILE and DELIM