@@ -17,7 +17,8 @@ Index</a></font></h1>
 <br>&nbsp;
 <p>On the left you see a screenshot of the cockpit
 <br>On the right you see a screenshot of the HUD (head-up-display) mode
-<p>You can use the following keys to switch between different views:
+<p><a NAME="views"></a>You can use the following keys to switch between
+different views:
 <ul>
 <li>
 F1&nbsp;&nbsp; cockpit/hud mode</li>
@@ -63,15 +64,16 @@ F12 zoom out</li>
 There are the following instruments:
 <ul>
 <li>
-In the middle of the screen, there's the crosshair - it shows where you're
-gonna fire your lasers :&nbsp;<img SRC="crosshair.png" NOSAVE height=53 width=90 align=ABSCENTER></li>
+<a NAME="crosshair"></a>In the middle of the screen, there's the crosshair
+- it shows where you're gonna fire your lasers :&nbsp;<img SRC="crosshair.png" NOSAVE height=53 width=90 align=ABSCENTER></li>
 
 <br>Use your joystick or keyboard arrows to steer your ship until the crosshair
 is over your target - fire!</ul>
 
 <ul>
 <li>
-At the top left of the cockpit you see the message display:&nbsp;<img SRC="message_display.png" NOSAVE height=53 width=273 align=TEXTTOP></li>
+<a NAME="message_display"></a>At the top left of the cockpit you see the
+message display:&nbsp;<img SRC="message_display.png" NOSAVE height=53 width=273 align=TEXTTOP></li>
 
 <ul>
 <li>
@@ -99,7 +101,7 @@ keys</li>
 <br>&nbsp;
 <ul>
 <li>
-The Radar is located in the bottom middle of the cockpit:&nbsp;<img SRC="radar.png" NOSAVE height=119 width=131 align=TEXTTOP></li>
+<a NAME="radar"></a>The Radar is located in the bottom middle of the cockpit:&nbsp;<img SRC="radar.png" NOSAVE height=119 width=131 align=TEXTTOP></li>
 
 <br>use the radar to have an overview about what's going on
 <ul>
@@ -126,24 +128,16 @@ Shield Display&nbsp;<img SRC="vdu_shields.png" NOSAVE height=94 width=91 align=C
 
 <br>&nbsp;
 <p>&nbsp;
-<br>&nbsp;
-<br>&nbsp;
-<br>&nbsp;
-<br>&nbsp;
 <p>shows your current shield status (front, back, left and right shields)
 <br>&nbsp;</ul>
 
 <ul>
 <li>
-You have got two VDU (Video Display Unit):</li>
+<a NAME="vdu"></a>You have got two VDU (Video Display Unit):</li>
 
 <br>&nbsp;
 <p>&nbsp;
-<br>&nbsp;
-<br>&nbsp;
-<br>&nbsp;
-<br>&nbsp;
-<p>Left VDU&nbsp;<img SRC="vdu_weapons.png" NOSAVE height=116 width=178 align=CENTER>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<p>Left VDU<img SRC="vdu_weapons.png" NOSAVE height=116 width=178 align=CENTER>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Right VDU:&nbsp;<img SRC="vdu_enemy_shields.png" NOSAVE height=114 width=175 align=CENTER>
 <p>each VDU can by cycled through different modes to see different views
 <ul>
@@ -156,7 +150,8 @@ press 'v' to cycle the right VDU</li>
 
 <br>&nbsp;
 <li>
-the left VDU can be cycled between the following modes:</li>
+<a NAME="left_vdu"></a>the left VDU can be cycled between the following
+modes:</li>
 
 <br>&nbsp;
 <ul>
@@ -175,7 +170,7 @@ Shields: show ?your? Shield status&nbsp;<img SRC="vdu_left_shields.png" NOSAVE h
 
 <br>&nbsp;
 <li>
-the right VDU can be cycled between these modes:</li>
+<a NAME="right_vdu"></a>the right VDU can be cycled between these modes:</li>
 
 <br>&nbsp;
 <ul>
