@@ -1,0 +1,130 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
+   <title>Vegastrike - Player Tutorial - Factions and Ship Types</title>
+</head>
+<body text="#000000" bgcolor="#CCCCCC" link="#00BB00" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
+
+<h1>
+<a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
+Vegastrike Player Tutorial - Factions and Ship Types&nbsp;&nbsp;&nbsp;
+<font size=+0><a href="index.html">to Index</a></font></h1>
+
+<hr WIDTH="100%">
+<p>In the Vegastrike universe, the following factions exist:
+<ul>
+<li>
+neutral<br>
+neutral ships are neutral to any other faction</li>
+
+<li>
+confed<br>
+the 'good guys' - the earthlings<br>
+confed is at war with the aera<br>
+confed is slightly suspicious about rlaan ships</li>
+
+<li>
+aera<br>
+the 'bad boys' - the bad alien race with evil in their mind<br>
+they are at war with anyone</li>
+
+<li>
+rlaan<br>
+some other unknown alien race?<br>
+at least, they're in war with the aera, too - but they wouldn't mind a
+small fight with confed fighters</li>
+
+<li>
+unknown<br>
+well, they're unknown, what can I say?<br>
+just blow'em away, cause they don't like anyone<br>
+<BR></li>
+</ul>
+If you are curious, have a look at the file data/factions.xml - you'll
+find the factions definitions there.
+<br>&nbsp;
+<br>&nbsp;
+<h4>
+Confed ship types:</h4>
+
+<ul>
+<li>
+firefly</li>
+
+<li>
+destiny</li>
+
+<li>
+tian</li>
+
+<li>
+nova</li>
+
+<li>
+cruiser</li>
+
+<li>
+cruiser_mk2</li>
+
+<li>
+carrier</li>
+
+<li>
+fleet_carrier</li>
+</ul>
+
+<h4>
+Aera ship types:</h4>
+
+<ul>
+<li>
+dagger</li>
+
+<li>
+aeon</li>
+
+<li>
+aevant</li>
+
+<li>
+kyta</li>
+
+<li>
+lekra</li>
+
+<li>
+osprey</li>
+
+<li>
+kira</li>
+</ul>
+
+<h4>
+Rlaan ship types:</h4>
+
+<ul>
+<li>
+skart</li>
+
+<li>
+f109vampire</li>
+
+<li>
+starfish</li>
+</ul>
+I would really like it if any of the creators of these ships would tell
+me more about them.
+<p>This ship type information was taken from the scripting file data/modules/faction_ships.c
+<br>&nbsp;
+<p>
+<hr WIDTH="100%">
+<p>please send feedback to <a href="mailto:vegastrike-users@lists.sourceforge.net">vegastrike-users@lists.sourceforge.net</a>
+and tell us what you think :-)
+<p>this page maintained by: Alexander Rawass &lt;<a href="mailto:alexannika@users.sourceforge.net">alexannika@users.sourceforge.net</a>>
+<br>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+</body>
+</html>
