@@ -15,7 +15,7 @@ Index</a></font></h1>
 <hr WIDTH="100%">
 <br>&nbsp;
 <h3>
-Flying:</h3>
+<a NAME="flying"></a>Flying:</h3>
 Currently, you can steer your ship via keyboard or joystick - joystick
 is of course recommended.
 <p>You can use the following keys to steer:
@@ -74,7 +74,7 @@ direction.
 <br>&nbsp;
 <br>&nbsp;
 <h2>
-Targeting:</h2>
+<a NAME="targeting"></a>Targeting:</h2>
 You can fire (and hit) on any target you want - even if you're not targeting
 the ship you're firing at.
 <p>But it is advised that you target the ship you want to fire on.
