@@ -29,6 +29,9 @@ us</a> write this, by contributing yourselves
 <a href="flying_targeting.html">Flying and targeting</a></li>
 
 <li>
+<a href="weapons_firing.html">Weapons and firing</a></li>
+
+<li>
 <a href="jump_drive.html">Interstellar jump drive and time compression</a></li>
 
 <li>
@@ -53,10 +56,17 @@ The <a href="vssetup.html">vssetup</a> tool</li>
 The <a href="mission_selector.html">Mission Selector</a></li>
 
 <li>
+<a href="keyboard_bindings.html">default keyboard bindings overview</a></li>
+
+<li>
+<a href="factions_ships.html">Factions and ship types</a></li>
+
+<li>
 </li>
 </ul>
 
-<p><br>
+<p><br>&nbsp;
+<p>
 <hr WIDTH="100%">
 <p>please send feedback to <a href="mailto:vegastrike-users@lists.sourceforge.net">vegastrike-users@lists.sourceforge.net</a>
 and tell us what you think :-)
