@@ -1,0 +1,91 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
+   <title>Vegastrike - Player Tutorial - default Keyboard Bindings</title>
+</head>
+<body text="#000000" bgcolor="#CCCCCC" link="#00BB00" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
+
+<h1>
+<a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
+Vegastrike Player Tutorial - default Keyboard Bindings&nbsp;&nbsp; <font size=+0><a href="index.html">to
+Index</a></font></h1>
+
+<hr WIDTH="100%">
+<br>&nbsp;
+<blockquote>
+<li>
+<a href="flying_targeting.html#flying">flying and turning</a></li>
+
+<p><br>Arrow keys: Flight Sim style turning
+<br>*,ins&nbsp;&nbsp;&nbsp;&nbsp; Spin Right
+<br>/,del&nbsp;&nbsp;&nbsp;&nbsp; Spin Left
+<br>~&nbsp;&nbsp;&nbsp;&nbsp; hold down, engage shelton slide
+<br>&nbsp;
+<li>
+<a href="flying_targeting.html#flying">accelerating/decelerating</a></li>
+
+<p><br>\&nbsp;&nbsp;&nbsp;&nbsp; full throttle
+<br>backspace&nbsp;&nbsp; zero throttle
+<br>=,+&nbsp;&nbsp;&nbsp;&nbsp; accel
+<br>-&nbsp;&nbsp;&nbsp;&nbsp; decel
+<br>TAB&nbsp;&nbsp;&nbsp;&nbsp; Afterburners
+<br>y&nbsp;&nbsp;&nbsp;&nbsp; match speed
+<br>&nbsp;
+<li>
+<a href="weapons_firing.html">weapons</a></li>
+
+<p><br>ENTER&nbsp;&nbsp;&nbsp;&nbsp; fire missile
+<br>space Fire&nbsp; Guns
+<br>m change&nbsp;&nbsp;&nbsp; active missile
+<br>g change&nbsp;&nbsp;&nbsp; active gun
+<br>&nbsp;
+<li>
+<a href="flying_targeting.html#targeting">targeting</a></li>
+
+<p><br>t target
+<br>p target nearest to center of screen
+<br>n target enemy targetting you
+<br>T target enemies for your turret
+<br>&nbsp;
+<li>
+<a href="cockpit.html#vdu">VDUs</a></li>
+
+<p><br>v switch <a href="cockpit.html#right_vdu">targetting computer</a>
+mode to navigation mode and then view mode
+<br>w switch <a href="cockpit.html#left_vdu">left targetting cpu</a>
+<br>&nbsp;
+<li>
+<a href="cockpit.html#views">views</a></li>
+
+<p><br>F1 toggle cockpit/background display
+<br>F2 left
+<br>F3 right
+<br>F4 back
+<br>F5 Chasecam
+<br>F6 Panning Cam (s,a,w,z pan)
+<br>F7 Target Cam
+<br>F8 Strange Cam
+<br>F11 Zoom in
+<br>F12 Zoom out
+<p>a,d,w,z pan ghost cam
+<br>&nbsp;
+<li>
+game control</li>
+
+<p><br>j engage interstellar warp drive (use at clear blue balls)
+<br>F9 Increase Time Compression
+<br>F10 Reset Time Compression
+<br>: respawn -- use after death to recreate your starship
+<br>[ switch ships in battle (use to control allies)</blockquote>
+
+<hr WIDTH="100%">
+<p>please send feedback to <a href="mailto:vegastrike-users@lists.sourceforge.net">vegastrike-users@lists.sourceforge.net</a>
+and tell us what you think :-)
+<p>this page maintained by: Alexander Rawass &lt;<a href="mailto:alexannika@users.sourceforge.net">alexannika@users.sourceforge.net</a>>
+<br>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+</body>
+</html>
