@@ -1,0 +1,134 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
+   <title>Vegastrike - Player Tutorial - Weapons and Firing</title>
+</head>
+<body text="#000000" bgcolor="#CCCCCC" link="#00BB00" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
+
+<h1>
+<a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
+Vegastrike Player Tutorial - Weapons and Firing&nbsp;&nbsp;&nbsp; <font size=+0><a href="index.html">to
+Index</a></font></h1>
+
+<hr WIDTH="100%">
+<p>Use those keys to select weapons:
+<br>&nbsp;
+<ul>
+<li>
+ENTER&nbsp;&nbsp;&nbsp;&nbsp; fire missile</li>
+
+<li>
+space&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Fire&nbsp; Guns/Lasers/Beams</li>
+
+<li>
+m&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+change&nbsp; active missile</li>
+
+<li>
+g&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+change&nbsp; active gun</li>
+</ul>
+
+<p><br>You can see which guns you are using on the <a href="cockpit.html#left_vdu">left
+VDU display</a> in weapon mode:
+<p><img SRC="vdu_weapons.png" NOSAVE height=116 width=178 align=CENTER>&nbsp;&nbsp;&nbsp;
+here you can see that the middle gun is selected - is it in brackets
+<p>The number of weapons, and if they're firing together is dependent on
+the type of the ships.
+<p>Some ships have more weapons, some fire together, some fire seperately.
+<p>On some ships you can't change weapons or missiles.
+<br>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+<table BORDER WIDTH="100%" NOSAVE >
+<caption>Weapons list</caption>
+
+<tr>
+<td>Weapon name</td>
+
+<td>Energy needed</td>
+
+<td>Damage done</td>
+</tr>
+
+<tr>
+<td>Laser</td>
+
+<td>4</td>
+
+<td>18</td>
+</tr>
+
+<tr>
+<td>LaserBeam</td>
+
+<td>12</td>
+
+<td>72</td>
+</tr>
+
+<tr>
+<td>IonBeam</td>
+
+<td>30</td>
+
+<td>90</td>
+</tr>
+
+<tr>
+<td></td>
+
+<td></td>
+
+<td></td>
+</tr>
+
+<tr>
+<td>Dumbfire</td>
+
+<td>0</td>
+
+<td>80</td>
+</tr>
+
+<tr>
+<td>HeatSeeker</td>
+
+<td>0</td>
+
+<td>80</td>
+</tr>
+
+<tr>
+<td></td>
+
+<td></td>
+
+<td></td>
+</tr>
+
+<tr>
+<td></td>
+
+<td></td>
+
+<td></td>
+</tr>
+</table>
+
+<br>&nbsp;
+<p>And many more guns and missiles - read more about them in the file data/weapon_list.xml
+<p>I have no idea which of them all are important etc
+<br>&nbsp;
+<p>
+<hr WIDTH="100%">
+<p>please send feedback to <a href="mailto:vegastrike-users@lists.sourceforge.net">vegastrike-users@lists.sourceforge.net</a>
+and tell us what you think :-)
+<p>this page maintained by: Alexander Rawass &lt;<a href="mailto:alexannika@users.sourceforge.net">alexannika@users.sourceforge.net</a>>
+<br>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+</body>
+</html>
